testsuite/tests/grammar/invalid_lkt/invalid_decl.lkt
from common import FooNode, Example
from lexer_example import foo_lexer

@with_lexer(foo_lexer) grammar foo_grammar {
    @main_rule main_rule <- Example("example")
    @with_lexer(foo_lexer) grammar unexpected_decl {
        @main_rule main_rule <- Example("example")
    }
}
